# GAL

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  compile_commands.json  link  main.cc  makefile
.cache/clangd/index/: _fixes.hpp.A4054CD4AE0ED771.idx  _vectorize.hpp.7170BEBECCE36C03.idx  anim.hh.97572D3C50E861E6.idx  attribute.hh.7DC9CD5719F0D178.idx  camera.c.C6EFD13F1FF8E51A.idx  cgltf.c.B22AE645567DB852.idx  cgltf.c.D072DBB1755FCD72.idx  cgltf.h.3A5F9D3CCA76A82E.idx  cgltf.h.BB443CC439C22796.idx  cgltf.h.F2BED3CFBD81B580.idx  common.hpp.D5A05E9218426953.idx  component_wise.hpp.480FBBA8DAF283D0.idx  component_wise.inl.0D2FFAB62E500C7B.idx  compute_common.hpp.D1C6BCA0E599D3CA.idx  compute_vector_relational.hpp.49A6A80AA2EE0544.idx  constants.hpp.AE85420E51184B3D.idx  constants.inl.5FD49956044D03CE.idx  cubemap.c.1EB00A72BEEEEBAE.idx  defines.h.196724F5485C62FC.idx  defines.h.C87E2D2D1B1A27AF.idx  epsilon.hpp.76666925F31B7F9B.idx  epsilon.inl.C7284EFA03F8C3A8.idx  exponential.hpp.EDEEDB91E3DC3B68.idx  func_common.inl.719EB05BDA3076AC.idx  func_exponential.inl.826A225DE70CA649.idx  func_geometric.inl.7371330578C47953.idx  func_integer.inl.E7B56141B2E0C884.idx  func_matrix.inl.F0F2CB353C44D922.idx  func_packing.inl.A90CC1F746F14A33.idx  func_trigonometric.inl.EF2B9DEBD023038D.idx  func_vector_relational.inl.C333E0EE1FDC9669.idx  fwd.hpp.09B80B97F9EA09D6.idx  geometric.hpp.E4F15BF4B607C438.idx  gl.c.842F49DFCA8791CB.idx  gl.h.0B8CA6710F75F86C.idx  gl.h.A37899281F0A0640.idx  glad.c.1AC8BDB4F1ED91DA.idx  glad.c.C7DBB6935B27583E.idx  glad.c.E21186033F306427.idx  glad.h.1CE395D3C8FFAA59.idx  (+201 more)
ext/: tinygltf.cc
ext/glad/include/glad/: glad.h
ext/glad/src/: glad.c
gal/: camera.hh  controller.hh  environment.hh  gal.hh  gl.hh  gltf.hh  material.hh  model.hh  prim.hh  scene.hh  sdl.hh  shader.hh  shader_generator.hh  util.hh  vk.hh
glp/: anim.cc  anim.hh  camera.hh  controller.hh  fonts.cc  fonts.hh  gl.hh  glp.hh  gltf.hh  material.hh  model.cc  model.hh  prim.hh  scene.hh  sdl.cc  sdl.hh  shader.cc  shader.hh  utils.cc  utils.h  utils.hh
glp/anim/: anim.cc  anim.hh  attribute.hh  gl_templates.cc  gltf.cc  gltf.hh  indexbuffer.hh  meshes.cc  meshes.hh  render.hh  shader.hh  texture.hh  transform.hh  uniform.hh
res/fonts/: karla.h
res/models/anim/: untitled.anim  untitled.model
res/models/animation2/: untitled.gltf
res/models/cube/: cube.model  untitled.gltf
res/models/house/: untitled.gltf
res/models/plane/: plane.model  untitled.gltf  untitled.mtl
res/models/sponza/: sponza.model
res/models/test/: test.model
res/shaders/: anim.frag  anim.vert  anim_v.frag  anim_v.vert  cube.frag  cube.vert  pbr.frag  pbr.h  phong.frag  phong.h  skinned.frag  skinned.h  skinned.vert  sky.frag  skybox.frag  skybox.vert  static.h  static.vert  text.vert  text_v.frag  text_v.vert  textured_fog.frag  uniform_shader.frag  uniform_shader.vert  uniform_shader_v.frag  uniform_shader_v.vert
res/shaders/vita/: pbr.frag  phong.frag  skinned.vert  static.vert  vita_skinned.vert  vita_static.vert  vita_text.vert  vita_textured.frag
src/: anim.cc  camera.cc  collidable.cc  controller.cc  environment.cc  fonts.cc  gal.cc  gl.cc  glp.cc  gltf.cc  material.cc  model.cc  placables.cc  player.cc  renderable.cc  scene.cc  scene.cc.bak  sdl.cc  shader.cc  shader_generator.cc  util.cc  utils.cc  vk.cc
utils/: CMakeLists.txt  main.cc  mesh.pb.cc  mesh.pb.h  mesh.proto  model.cc  model.hh  model.pb.cc  model.pb.h  model.proto
utils/conv/: CMakeLists.txt  main.cc
utils/scener/: CMakeLists.txt  main.cc
utils/studio/: CMakeLists.txt  bullet.cc  main.cc  static.cc
utils/studio/res/shaders/: pbr.frag  skinned.vert  static.vert  text.frag
